# rusty_entity_macro

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: getter_expected_results.rs  getters.rs  no_duplicated_getter.rs  parse.rs  same_attribute_for_property.rs  setup.rs
